Fixed alignment

--- a/style.css
+++ b/style.css
@@ -313,7 +313,7 @@ video{
     position: absolute;
     left: 0;
     bottom: 0;
-    top: 42%;
+    top: 41%;
 
     width: 100%;
     height: 50%;
